apps/base/vibrato/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vibrato
  labels:
    http-ingress: "true"
