apps/base/vibrato/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vibrato
  namespace: vibrato
  labels:
    app.kubernetes.io/name: vibrato
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: vibrato
